@@ -64,10 +64,6 @@ sub _apply_optional_features ( $config, $for_class ) {
             croak("multi subs not supported in Perl version less than v5.26.0. You have $^V");
         }
 
-        use Data::Dumper;
-        say STDERR Dumper($config);
-        say STDERR Dumper($for_class);
-
         # don't trap the error. Let it bubble up.
         load Syntax::Keyword::MultiSub;
         Syntax::Keyword::MultiSub->import::into($for_class);
